--- a/baldwin635/baldwin635.html
+++ b/baldwin635/baldwin635.html
@@ -33,6 +33,18 @@
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
           <p>
+            <center>
+              <h2>Project Links</h2>
+              <a href="http://www.dersche.id/baldwin635/bom.html">Bill of Materials</a>
+            </center>
+          </p>
+          <br>
+          <br>
+          <p>
+            <center><h1>Project Description and History</h1></center>
+          </p>
+          <br>
+          <p>
             My Baldwin SilentTouch 635 Church Organ was originally used for playing church services at Hope Summit Church in Rochester, MN.
             It had been gifted to the Church brand new by a long time member, who became the organist there. Unfortunately, after years of
             reliable service, small problems began to arise. Eventually, after renovations and improvements to the Church, it was discovered
@@ -81,6 +93,10 @@
             a modern PC. From there, software such as Hauptwerk or GrandOrgue would be used to simulate some of the best pipe organs in the world
             using samples recorded from each individual pipe.
           </p>
+          <hr>
+          <p>
+            <i>Modified Feb. 13, 2018</i>
+          </p>
           <p>
             And this is where I am at now, trying to devise a system which would do everything I need it to do, while remaining on the budget of
             a college student. At the end of the Spring 2017 semester, I completely changed directions, and became an organ major. That means I
@@ -100,6 +116,25 @@
             keyboard. In addition to that, it must store up to 64 sets of these pistons and their relevant stop data in different memory banks
             to allow multiple organists to use the same console and each have their own set of presets. This functionality will only run locally,
             it is not necessary for it to send any of the piston information to the PC.
+          </p>
+          <hr>
+          <p>
+            <i>Modified June 26, 2016</i>
+          </p>
+          <p>
+            Just last week, I finally finished up the circuit schematic and PCB layout. I sent the Gerber files off to a Chinese company, which
+            advertised fabrication in one day and fast free shipping. The total time from order to arrival is estimated at 5 days and even at
+            the low volume I need, 5 boards (minimum order), the price is unbeatable. The day after I sent them the files, I heard back that there was an error
+            with them so after a small change I sent them back, and sure enough the next day the boards were fabricated. The current status is
+            that the boards have cleared customs and arrived in Cincinnati, Ohio. They were meant to be delivered today, but apparently arrived
+            later than expected. Hopefully they will be here tomorrow so I can begin assembly!
+          </p>
+          <p>
+            At the same time I ordered the boards, I also ordered all of the components I would need. This includes the integrated circuits, in
+            this case multiplexers and resistor arrays, as well as some resistors, MIDI jacks, and terminal blocks. These components will all be
+            soldered onto the PCB. I will also be making my own ribbon cables for the connections between the board and the keyboards, pedalboards,
+            and other switches, and so I have 200 feet of 3M 16 conductor 26AWG ribbon cable and compatible ribbon cable headers. I've also had to
+            acquire a special crimper to attach the headers to the cable itself.
           </p>
         </div>
       </div>
