--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -49,7 +49,7 @@
           <ol>
             <li>
               <strong>1917 Oliver 9 </strong><a href="http://www.dersche.id/typewriters/1917Oliver9.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1917Oliver9/thumbnail.jpg" alt="1917 Oliver 9" style="width:150px;"></p>
+              <p><img src="https://lh3.googleusercontent.com/3XPOZXNqWJU5Gwib3FAbtrTWl4CMZIQKYySu8KZc4gXuOKnteLjx0UqczYWM4EUoCifDKbarEHQTwk551o8ZlOgR86tWBKbNAV9Kl1Rgp8DQx1Hi4lEGXW-al_esjV6HQ83weiVuaA=w2400" alt="1917 Oliver 9" style="width:150px;"></p>
             </li>
             <li>
               <strong>1918 Corona 3 </strong><a href="http://www.dersche.id/typewriters/1918Corona3.html"><font size="1">more...</font></a>
@@ -65,7 +65,7 @@
             </li>
             <li>
               <strong>1925 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1925RemingtonPortable.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1925RemingtonPortable/thumbnail.jpg" alt="1925 Remington Portable" style="width:150px;"></p>
+              <p><img src="https://lh3.googleusercontent.com/A3rjvh5091wRKB2-BSdGen9bguZ2Qara9eMGvtOB8UGT7KtoSm33DAQvENNSrrtPO6-G_Un1OecX6PS21GOwTTxxzTZ0AIha9SX76NoumSy8cmzDtCAaFox3eoCKrRm3YExoNwxZMg=w2400" alt="1925 Remington Portable" style="width:150px;"></p>
             </li>
             <li>
               <strong>1925 Woodstock 5 </strong><a href="http://www.dersche.id/typewriters/1925Woodstock5.html"><font size="1">more...</font></a>
@@ -77,7 +77,7 @@
             </li>
             <li>
               <strong>1926 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1926RemingtonPortable.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1926RemingtonPortable/thumbnail.jpg" alt="1926 Remington Portable" style="width:150px;"></p>
+              <p><img src="https://lh3.googleusercontent.com/oN3MRcb0LQnR5q1MbawxG9BF0rrd0E2eR5dDRSLAKJnLe4-i_qkMUbfZ7hrl6eSCmSa677hUrKdn9EA8ffN6XVrFNpXhOXqMjmmWf7A9aKdMY4r4GSGXAW8N9PgKkE96O8GVEjNRAg=w2400" alt="1926 Remington Portable" style="width:150px;"></p>
             </li>
             <li>
               <strong>1926 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1926Royal10.html"><font size="1">more...</font></a>
