--- a/otherLanding.html
+++ b/otherLanding.html
@@ -37,7 +37,7 @@
             This page contains a memorial to Margaret McDonald Stanton from the I.A.C. Student, which is now ISU Daily. The original content comes from the July 30, 1895 issue of the paper.
           </p>
           <p>
-            <a href="http://www.dersche.id/baldwin635.html"><h3><strong>Baldwin SilentTouch 635 Church Organ</strong></h3></a>
+            <a href="http://www.dersche.id/baldwin635/baldwin635.html"><h3><strong>Baldwin SilentTouch 635 Church Organ</strong></h3></a>
             Documenting the restoration / modernification of my Baldwin SilentTouch 635 Church Organ. Adding MIDI and if possible, repairing original function.
           </p>
         </div>
