--- a/typewriterCollection.html
+++ b/typewriterCollection.html
@@ -49,11 +49,11 @@
           <ol>
             <li>
               <strong>1917 Oliver 9 </strong><a href="http://www.dersche.id/typewriters/1917Oliver9.html"><font size="1">more...</font></a>
-              <p><img src="https://lh3.googleusercontent.com/3XPOZXNqWJU5Gwib3FAbtrTWl4CMZIQKYySu8KZc4gXuOKnteLjx0UqczYWM4EUoCifDKbarEHQTwk551o8ZlOgR86tWBKbNAV9Kl1Rgp8DQx1Hi4lEGXW-al_esjV6HQ83weiVuaA=w2400" alt="1917 Oliver 9" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Oliver9_A996305.jpg" alt="1917 Oliver 9" style="width:150px;"></p>
             </li>
             <li>
               <strong>1918 Corona 3 </strong><a href="http://www.dersche.id/typewriters/1918Corona3.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1918Corona3/thumbnail.jpg" alt="1918 Corona 3" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Corona3_150301.jpg" alt="1918 Corona 3" style="width:150px;"></p>
             </li>
             <li>
               <strong>192X Elliot Fisher Accounting Typewriter </strong><a href="http://www.dersche.id/typewriters/ElliotFisher.html"><font size="1">more...</font></a>
@@ -65,23 +65,23 @@
             </li>
             <li>
               <strong>1925 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1925RemingtonPortable.html"><font size="1">more...</font></a>
-              <p><img src="https://lh3.googleusercontent.com/A3rjvh5091wRKB2-BSdGen9bguZ2Qara9eMGvtOB8UGT7KtoSm33DAQvENNSrrtPO6-G_Un1OecX6PS21GOwTTxxzTZ0AIha9SX76NoumSy8cmzDtCAaFox3eoCKrRm3YExoNwxZMg=w2400" alt="1925 Remington Portable" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RemingtonPortable_NZ55178.jpg" alt="1925 Remington Portable" style="width:150px;"></p>
             </li>
             <li>
               <strong>1925 Woodstock 5 </strong><a href="http://www.dersche.id/typewriters/1925Woodstock5.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1925Woodstock5/thumbnail.jpg" alt="1925 Woodstock 5" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Woodstock_N143231.jpg" alt="1925 Woodstock 5" style="width:150px;"></p>
             </li>
             <li>
               <strong>1926 Corona Four </strong><a href="http://www.dersche.id/typewriters/1926CoronaFour.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1926CoronaFour/thumbnail.jpg" alt="1926 Corona Four" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/CoronaFour_1K06940.jpg" alt="1926 Corona Four" style="width:150px;"></p>
             </li>
             <li>
               <strong>1926 Remington Portable </strong><a href="http://www.dersche.id/typewriters/1926RemingtonPortable.html"><font size="1">more...</font></a>
-              <p><img src="https://lh3.googleusercontent.com/oN3MRcb0LQnR5q1MbawxG9BF0rrd0E2eR5dDRSLAKJnLe4-i_qkMUbfZ7hrl6eSCmSa677hUrKdn9EA8ffN6XVrFNpXhOXqMjmmWf7A9aKdMY4r4GSGXAW8N9PgKkE96O8GVEjNRAg=w2400" alt="1926 Remington Portable" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RemingtonPortable_ND69699.jpg" alt="1926 Remington Portable" style="width:150px;"></p>
             </li>
             <li>
               <strong>1926 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1926Royal10.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1926Royal10/thumbnail.jpg" alt="1926 Royal 10" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Royal10_12-912788.jpg" alt="1926 Royal 10" style="width:150px;"></p>
             </li>
             <li>
               <strong>1927 Bing 2 </strong><a href="http://www.dersche.id/typewriters/1927Bing2.html"><font size="1">more...</font></a>
@@ -89,19 +89,19 @@
             </li>
             <li>
               <strong>1927 Corona Four </strong><a href="http://www.dersche.id/typewriters/1927CoronaFour.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1927CoronaFour/thumbnail.jpg" alt="1927 Corona Four" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Corona4_S6L09761.jpg" alt="1927 Corona Four" style="width:150px;"></p>
             </li>
             <li>
               <strong>1927 Remington 12 </strong><a href="http://www.dersche.id/typewriters/1927Remington12.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1927Remington12/thumbnail.jpg" alt="1927 Remington 12" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Remington12_BZ74014.jpg" alt="1927 Remington 12" style="width:150px;"></p>
             </li>
             <li>
               <strong>1927 Royal P </strong><a href="http://www.dersche.id/typewriters/1927RoyalP.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1927RoyalP/thumbnail.jpg" alt="1927 Royal P" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RoyalP_P26703.jpg" alt="1927 Royal P" style="width:150px;"></p>
             </li>
             <li>
               <strong>1931 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1931Royal10.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1931Royal10/thumbnail.jpg" alt="1931 Royal 10" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Royal10WideCarriage_18-1351428.jpg" alt="1931 Royal 10" style="width:150px;"></p>
             </li>
             <li>
               <strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard.html"><font size="1">more...</font></a>
@@ -109,31 +109,31 @@
             </li>
             <li>
               <strong>1936 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1936CoronaStandard2.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard2/thumbnail.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaStandard_1062096.jpg" alt="1936 Corona Standard" style="width:150px;"></p>
             </li>
             <li>
               <strong>1938 Royal 10 </strong><a href="http://www.dersche.id/typewriters/1938Royal10.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1938Royal10/thumbnail.jpg" alt="1938 Royal 10" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/Royal10_SY-38-100158.jpg" alt="1938 Royal 10" style="width:150px;"></p>
             </li>
             <li>
               <strong>1939 Corona Standard </strong><a href="http://www.dersche.id/typewriters/1939CoronaStandard.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1939CoronaStandard/thumbnail.jpg" alt="1939 Corona Standard" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaStandard_2C228001.jpg" alt="1939 Corona Standard" style="width:150px;"></p>
             </li>
             <li>
               <strong>1939 Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1939CoronaSterling.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1939CoronaSterling/thumbnail.jpg" alt="1939 Corona Sterling" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaSterling_2A-53739.jpg" alt="1939 Corona Sterling" style="width:150px;"></p>
             </li>
             <li>
               <strong>1946 Royal Quiet De Luxe </strong><a href="http://www.dersche.id/typewriters/1946RoyalQuietDeLuxe.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1946RoyalQuietDeLuxe/thumbnail.jpg" alt="1939 Corona Sterling" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RoyalQuietDeLuxe_A-1248161.jpg" alt="1946 Royal Quiet DeLuxe" style="width:150px;"></p>
             </li>
             <li>
               <strong>1946 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1946SmithCoronaSilent.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1946SmithCoronaSilent/thumbnail.jpg" alt="1946 Smith Corona Silent" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaSilent_4S134846.jpg" alt="1946 Smith Corona Silent" style="width:150px;"></p>
             </li>
             <li>
               <strong>1947 Remington Rand Noiseless 7 </strong><a href="http://www.dersche.id/typewriters/1947RemingtonRandNoiseless7.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1947RemingtonRandNoiseless7/thumbnail.jpg" alt="1947 Remington Rand Noiseless 7" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RemingtonRand7_H127724.jpg" alt="1947 Remington Rand Noiseless 7" style="width:150px;"></p>
             </li>
             <li>
               <strong>1949 Remington All New </strong><a href="http://www.dersche.id/typewriters/1949RemingtonAllNew.html"><font size="1">more...</font></a>
@@ -141,31 +141,31 @@
             </li>
             <li>
               <strong>1949 Smith Corona Sterling </strong><a href="http://www.dersche.id/typewriters/1949SmithCoronaSterling.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1949SmithCoronaSterling/thumbnail.jpg" alt="1949 Smith Corona Sterling" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaSterling_5A198091.jpg" alt="1949 Smith Corona Sterling" style="width:150px;"></p>
             </li>
             <li>
               <strong>1952 Smith Corona Silent </strong><a href="http://www.dersche.id/typewriters/1952SmithCoronaSilent.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1952SmithCoronaSilent/thumbnail.jpg" alt="1952 Smith Corona Silent" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaSilent_5S376697.jpg" alt="1952 Smith Corona Silent" style="width:150px;"></p>
             </li>
             <li>
               <strong>1953 Royal HH </strong><a href="http://www.dersche.id/typewriters/1953RoyalHH.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1953RoyalHH/thumbnail.jpg" alt="1953 Royal HH" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RoyalHH_HHP-13-4977834.jpg" alt="1953 Royal HH" style="width:150px;"></p>
             </li>
             <li>
               <strong>1954 Halberg Traveler </strong><a href="http://www.dersche.id/typewriters/1954HalbergTraveler.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1954HalbergTraveler/thumbnail.jpg" alt="1954 Halberg Traveler" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/HalbergTraveler_42341.jpg" alt="1954 Halberg Traveler" style="width:150px;"></p>
             </li>
             <li>
               <strong>1954 Remington Quiet-Riter </strong><a href="http://www.dersche.id/typewriters/1954RemingtonQuietRiter.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1954RemingtonQuietRiter/thumbnail.jpg" alt="1954 Remington Quiet-Riter" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/RemingtonQuiet-Riter_QR2689625.jpg" alt="1954 Remington Quiet-Riter" style="width:150px;"></p>
             </li>
             <li>
               <strong>1955 Smith Corona Skyriter </strong><a href="http://www.dersche.id/typewriters/1955SmithCoronaSkyriter.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1955SmithCoronaSkyriter/thumbnail.jpg" alt="1955 Smith Corona Skyriter" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/SmithCoronaSkyriter_2Y-261779.jpg" alt="1955 Smith Corona Skyriter" style="width:150px;"></p>
             </li>
             <li>
               <strong>1957 Underwood Star </strong><a href="http://www.dersche.id/typewriters/1957UnderwoodStar.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1957UnderwoodStar/thumbnail.jpg" alt="1957 Underwood Star" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/UnderwoodStar_GA2845584.jpg" alt="1957 Underwood Star" style="width:150px;"></p>
             </li>
             <li>
               <strong>1958 Olympia SG1 De Luxe </strong><a href="http://www.dersche.id/typewriters/1958OlympiaSG1DeLuxe.html"><font size="1">more...</font></a>
@@ -173,7 +173,7 @@
             </li>
             <li>
               <strong>1960 Hermes Rocket </strong><a href="http://www.dersche.id/typewriters/1960HermesRocket.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1960HermesRocket/thumbnail.jpg" alt="1960 Hermes Rocket" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/HermesRocket_5755838.jpg" alt="1960 Hermes Rocket" style="width:150px;"></p>
             </li>
             <li>
               <strong>1962 Royal Futura 800 </strong><a href="http://www.dersche.id/typewriters/1962RoyalFutura800.html"><font size="1">more...</font></a>
@@ -185,7 +185,7 @@
             </li>
             <li>
               <strong>1969 Olivetti-Underwood Studio 45 </strong><a href="http://www.dersche.id/typewriters/1969OlivettiUnderwoodStudio45.html"><font size="1">more...</font></a>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1969OlivettiStudio45/thumbnail.jpg" alt="1969 Olivetti-Underwood Studio 45" style="width:150px;"></p>
+              <p><img src="http://www.dersche.id/assets/img/typewriters/thumbnails/OlivettiStudio45_1346563.jpg" alt="1969 Olivetti-Underwood Studio 45" style="width:150px;"></p>
             </li>
             <li>
               <strong>1974(?) AN-UGC74A(V)3 Military Teletypewriter </strong><a href="http://www.dersche.id/typewriters/teletype.html"><font size="1">more...</font></a>
