--- a/stanton.html
+++ b/stanton.html
@@ -134,11 +134,25 @@
             derivative parental endowments, we instantly feel a truth in the poem of Wordsworth:<br>
           </p>
           <p>
-            "Our birth is but a sleep and a forgetting:<br>The sould that rises with us, our life's star,<br>Hath had elsewhere it's setting,
-            <br>And cometh from afar:<br>Not in entire forgetfulness,<br>And not in utter nakeness,<br>But trailing clouds of glory do we come.<br>
-            From God, who is our home,<br>Heaven lies about us in our infancy.<br> * * * * I raise<br>The song of thanks and praise<br>
-            * * * * * <br>For those first affections.<br>Those shadowy recollections,<br>Which be they what they may,<br>Are yet the fountain light
-            of all our day,<br>Are yet a master light of all our seeing."<br>
+            <br>
+            &emsp;"Our birth is but a sleep and a forgetting:<br>
+            &emsp;&emsp;The sould that rises with us, our life's star,<br>
+            &emsp;Hath had elsewhere it's setting,<br>
+            &emsp;&emsp;And cometh from afar:<br>
+            &emsp;&emsp;&emsp;Not in entire forgetfulness,<br>
+            &emsp;&emsp;&emsp;And not in utter nakeness,<br>
+            &emsp;But trailing clouds of glory do we come.<br>
+            &emsp;From God, who is our home,<br>
+            &emsp;&emsp;Heaven lies about us in our infancy.<br>
+            &emsp;&emsp;*&emsp;*&emsp;*&emsp;*&emsp;I raise<br>
+            &emsp;The song of thanks and praise<br>
+            &emsp;&emsp;&emsp;&emsp;*&emsp;*&emsp;*&emsp;*&emsp;*<br>
+            &emsp;&emsp;&emsp;For those first affections.<br>
+            &emsp;&emsp;&emsp;Those shadowy recollections,<br>
+            &emsp;&emsp;Which be they what they may,<br>
+            &emsp;Are yet the fountain light of all our day,<br>
+            &emsp;&emsp;Are yet a master light of all our seeing."<br>
+            <br>
           </p>
           <p>
             The childlife of our friend gave most pleasing expression of the truest forms and noblest embodiments of youthful life and
@@ -151,9 +165,126 @@
             that at the age of sixteen, she identified herself with the Presbyterian church at Claysville, Ohio. This local church organization
             had become characterized by its adherence to the freedom of man and the cause of the union. Her parents and she went some six miles
             from home to be identified with the church, whose pastor, Rev. Matthew Miller, had become prominent in his words for the union.
+          </p>
+          <p>
+            This was a formal beginning of a christian life and character that strengthened with the years, beautified with its joys and sorrows
+            and triumphed through its losses and trials. How true it is that a well spent youth is an indispensable foundation of the most
+            successful and useful life. She early felt the importance of a higher education. After having shared the noble influence of the
+            public schools, America's bulwark, and our youth's divine safe-guard, she become a student in Muckingham College. In this college
+            Pres. Harper now of Chicago University was then a student. She here laid the foundation for thoroughness of learning that marked
+            her most creditable career of after years. Her parents moved west in 1864 and located near Mt. Pleasant, Iowa. This necessitated
+            the severing of her connection with the College in Ohio. She soon thereafter became a student in Mt. Pleasant Seminary, an
+            institution presided over by Rev. Mr. and Mrs. Beldon, whose sterling character and sound learning gave greatest worth and front
+            rank to this educational institution. It was in that memorable period of Iowa education in which the corner stones were placed
+            for our most creditable system of higher education, when learning for learning's sake and the soul's sake was imparted by men and
+            women that loved man and revered God. Our friend shared these exalted purposes of a higher education, became a leading student of
+            the seminary and graduated with honor to herself and friends. She was thus enabled to add to a well spent youth the preparation
+            of a christian education. This spirit of sterling education she carried with her as a teacher in the public schools. Her efficiency
+            as a teacher and her worth as a woman soon attracted the attention of those forming a faculty for the Iowa Agricultural College. In
+            1870 she was elect as lady Preceptress and Professor of French and English in this institution. From the first she made a marked
+            impression upon her associates and students. In those days the College did not have as many buildings as now. There was no hospital
+            and there were many consequent inconveniences. The sick had to be cared for in their own rooms. As is often true, such an environment
+            became a source of revealing the most exalted character of society. Miss McDonald possessed the very qualities that would meet these
+            difficulties and turn them into triumphs and blessings. The students came to look upon her as their truest friend. She visited the
+            rooms of the boys and girls alike in their sickness and all felt at home in her presence and ennobled by her ministry. Those early
+            students of the college came to look upon her as if a patron saint, whose beck to duty was a privilege and whose teaching a blessing.
+            The older alumni and undergraduates of those years speak of her with a reverence that can only be born in the work and service
+            of a true teacher, of the genuine woman and the unselfish devotion of a Christ-like disciple. Men and women in the most varied
+            positions of life and responsibility, to the governor and his wife of the great state of Iowa, join in these hours with most
+            grateful tribute to her kindness and ministry during their student life. The qualities that made her so successful as preceptress
+            became strongest factors in imprinting her personality upon the students in the classroom. No teaching is half done that leaves
+            out the wholesome personality of the teacher. In this respect our friend imprinted indelibly her strong personality upon the
+            student. No teaching is efficiently done that depends too largely upon the personality and lacks in the formal presentation of
+            the text and the truth. In this, also, our friend was most successful. Her teaching was characterized by the completest
+            thoroughness - a thoroughness that entered into the smaller details and accuracies which determine the perfection of scholarship
+            and the integrity of learning. These strong points of a masterful teacher carried with them their attendant virtues and made her
+            life in the college faculty one of the most memorable of its ablest members.
+          </p>
+          <p>
+            During these years she found means and time to help the friends at home in Mt. Pleasant. Many of you know the early struggles
+            incident to our fathers and mothers in purchasing lands and building homes on these prairies of Iowa. Father and mother McDonald
+            with thousands of others of our most stable pioneers encountered such early hardships. Our departed friend gave largely of her salary
+            and devoted a number of her years to the freeing of the farm and the placing of the homestead on the mount of a new freedom and
+            fuller blessing. The spirit of her parents that had led to her own education was thoroughly imbibed and her aid in these years also
+            helped to make possible the education and larger life of the remaining children of the family. This thoughtfulness and provision
+            for others rather than for herself was a marked characteristic of her entire life. It is the spirit of a true heroine.
+          </p>
+          <p>
+            There is a time of life too often the subject of pleasantry and thoughtlessness in poetry, song and parlor exchange, yet, it has
+            about it the bloom of many springs and a hallowedness that renders it appropriately mentionable during these solemn experiences.
+            The Hebrew sages under divine illumination were nearer the truth in making the obligation of betrothal scarcely second to marriage
+            itself, This college period of marked usefulness in the life of our friend was also a time of her betrothal to an associate member
+            of the faculty. Her large womanhood and deep sense of life's meanings needed no constraint of custom or sage to meet with womanly
+            sense these new found joys and expectancies that make the noblest life still nobler. On Fubruary 22nd, 1877 she was united in
+            marriage with Prof. E. W. Stanton, then as now Professor of Mathematics of the Iowa Agricultural College. After her married life
+            she taught for two years and of her own accord gave up her teaching to give herself more fully to the building of their new home
+            and meeting the fuller relations of life. For eight years she thus directly shared the counsel bore the burdens and helped to mould
+            the high born destinies of this college.
+          </p>
+          <p>
+            Home life is capable of infinite expansion and variation. It nourishes and yet reveals life and character. The cardinal virtues
+            that had made her so much in the profession of teaching, now had a larger realm for her as wife and mother. The years of her married
+            life gained double meaning by the birth of four children, three of whom live with the father on earth and one with the mother in
+            heaven. She brought to the home an institution which was almost unerring. To woman's proverbial intuition she had an added gift that
+            made her judgment of men and things of vast practical value to herself and family. Coupled with it was an independence of thought
+            and decision of character that made her a tower of strength to all the members of the family and to the community. Her love and
+            devotion to the family were most beautiful. Her thought was always of others and not of herself. Her clearness and firmness
+            of judgment freed her of many cares and worries that so often fret the life and tire the soul. Her patience and endurance surpassed
+            every demand and rendered her a fountain of never failing strenth and cheer. It kept out impatient words and brought whole trains
+            of happy scenes and joyful hours. Her entire home life was most happy and markedly free from anything that would mar or sadden.
+            She believed with Ruskin that: "Our God is a household God, as well as a heaven-one, He has an altar in every man's dwelling," and
+            to this altar she daily led her household and at this altar gave them her final good-byes and consecrations for the years to come.
+            She was a noble wife and the truest of mothers.
+          </p>
+          <p>
+            No stronger encomium of her as a mother could possibly be uttered than that of her own child when she said, "I never can do anything
+            wrong when I think of mamma." Nor of her as a wife by the husband, "It was heavenly to live with her." Yea, friends, what is heaven
+            but the eternal communion of kindred souls. And of her as a daughter and sister when all her father's family harmoniously unite in
+            saying: "We all looked to Maggie as a main stay."
+          </p>
+          <p>
             <br>
+            &emsp;"There are three words that sweetly blend,<br>
+            &emsp;&emsp;That on the heart are graven;<br>
+            &emsp;A precious, soothing balm they lend-<br>
+            &emsp;&emsp;They're mother, home and heaven.<br>
+            <br>
+            &emsp;They twine a wreath of beauteous flowers,<br>
+            &emsp;&emsp;Which, placed on memory's urn,<br>
+            &emsp;Will e'en the longest, gloomiest hours<br>
+            &emsp;&emsp;To golden sunlight turn.<br>
+            <br>
+            &emsp;They form a chain whose every link<br>
+            &emsp;&emsp;Is free from base alloy;<br>
+            &emsp;A stream where whosoever drinks<br>
+            &emsp;Will find refreshing joy."<br>
             <br>
           </p>
+          <p>
+            As could be expected such a home life entered into all her duties in the community and made her one of its most valuable members.
+            As a neighbor she was ever ready in sickness and in health to administer to the welfare of the humblest or strongest members of
+            society. In the benefactions that have to do with the relief of the poor, the comfort of the sick, and sympathies with the joys
+            and presperities of other homes, she stood a model.
+          </p>
+          <p>
+            Her deep convictions of truth and high regard of honor gave her a detestation of everything that was wrong. Her keen discernment
+            of right and wrong rendered her unswervingly faithful to the truth. She never temporized with evil nor believed in policy. She
+            possessed the happy faculty of denouncing wrong without harboring bitterness for the person guilty of the wrong. She could thus
+            enter most righteously and helpfully into the life of the wrong doer. It kept her mind free from the ills consequent upon the
+            personal faulting of anyone.
+          </p>
+          <p>
+            She was most patriotic. In early girl hood her country's cause was near her heart. The union soldier was held by her in highest
+            reverences. For any one to speak lightly in regard to the pension of the soldier would bestir her with most womanly indignation.
+            She counted the needy soldiery of the country most worth of all the help the country might bestow upon them. Memorial Day was
+            deemed by her the most sacred and beautiful of all our holidays. She was indeed a patriotic mother. And had in large measure
+            what Walt Whitman calls "the new national virtue of unionism."
+          </p>
+          <p>
+            Her long and faithful service in the
+          </p>
+          <br>
+          <br>
           <p>
             <h3><strong><u>Original Scans from Microfilm</u></strong></h3>
           </p>
