--- a/baldwin635/baldwin635.html
+++ b/baldwin635/baldwin635.html
@@ -11,11 +11,11 @@
   <![endif]-->
   <title>DERSCHE.id - Family Website</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet" />
+  <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
-  <link href="assets/css/font-awesome.css" rel="stylesheet" />
+  <link href="http://www.dersche.id/assets/css/font-awesome.css" rel="stylesheet" />
   <!-- CUSTOM STYLE CSS -->
-  <link href="assets/css/style.css" rel="stylesheet" />
+  <link href="http://www.dersche.id/assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
   <div w3-include-html="http://www.dersche.id/includes/header.html"></div>
