Update Page Titles

--- a/typewriters/1925Woodstock5.html
+++ b/typewriters/1925Woodstock5.html
@@ -9,7 +9,7 @@
   <!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>DERSCHE.id - Family Website</title>
+  <title>1925 Woodstock - DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
   <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
@@ -42,7 +42,7 @@
             Decals in near mint condition. Right shift lock removed. Right shift key replaced with "Fletcher T.W.Co." key.
           </p>
           <p>
-            Gift from my grandfather, Putty Derscheid.
+            Gift from my grandfather, Roger Henry "Putty" Derscheid.
           </p>
           <center>
             <p><img src="http://www.dersche.id/assets/img/typewriters/1925Woodstock5/rtilt.jpg" alt="1925 Woodstock 5 Right Angle" style="width:500px;"></p>
