--- a/typewriters/1939CoronaSterling.html
+++ b/typewriters/1939CoronaSterling.html
@@ -9,7 +9,7 @@
   <!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>DERSCHE.id - Family Website</title>
+  <title>1939 Corona Sterling - DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
   <link href="http://www.dersche.id/assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
