--- a/blank.html
+++ b/blank.html
@@ -9,7 +9,7 @@
   <!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>DERSCHE.id - Family Website</title>
+  <title>DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
