--- a/organs.html
+++ b/organs.html
@@ -9,7 +9,7 @@
   <!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>DERSCHE.id - Family Website</title>
+  <title>DERSCHE.id</title>
   <!-- BOOTSTRAP CORE STYLE CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet" />
   <!-- FONTAWESOME STYLE CSS -->
@@ -34,7 +34,7 @@
         <div class="col-md-12" style="min-height:800px;">
           <br>
           <p>
-            
+
           </p>
         </div>
       </div>
