--- a/stanton.html
+++ b/stanton.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
           <div class="alert alert-info" >
-            Margaret McDonald Stanton passed away on July 24, 1895. Both she and her husband, Edgar Stanton, were faculty
+            Margaret McDonald Stanton passed away on July 24, 1895. Both she and her husband, Edgar W. Stanton, were faculty
             members at Iowa Agricultural College, now known as Iowa State University. Though her untimely death was a tragedy for such a small and close-knit community, it is
             Only for this reason reason that the I.S.U. campus is graced by the presence of the Edgar W. and Margaret McDonald
             Stanton Memorial Carillon. This page is dedicated to Margaret and Edgar Stanton, and will include several articles and items which I have referenced for my research.
