Update formatting of code

--- a/stanton.html
+++ b/stanton.html
@@ -33,10 +33,14 @@
       <div class="row">
         <div class="col-md-12" style="min-height:800px;">
           <div class="alert alert-info" >
-            Margaret McDonald Stanton passed away on July 24, 1895. Both she and her husband, Edgar Stanton, were faculty members at Iowa Agricultural College, now known as Iowa State University. Though her untimely death was a tragedy for such a small and close-knit community, it is only for this reason that the I.S.U. campus is graced by the presence of the Edgar W. and Margaret McDonald Stanton Memorial Carillon. This page is dedicated to Margaret and Edgar Stanton, and will include several articles and items which I have referenced for my research.
-The following article was originally printed in the July 30, 1895
-            edition of the I.A.C. Student, the school paper at the time, and was transcribed in it's entirety by myself.
-            The scans of the article are original scans from microfiche from the Parks Library on campus.
+            Margaret McDonald Stanton passed away on July 24, 1895. Both she and her husband, Edgar Stanton, were faculty 
+            members at Iowa Agricultural College, now known as Iowa State University. Though her untimely death was a 
+            tragedy for such a small and close-knit community, it is only for this reason that the I.S.U. campus is 
+            graced by the presence of the Edgar W. and Margaret McDonald Stanton Memorial Carillon. This page is dedicated 
+            to Margaret and Edgar Stanton, and will include several articles and items which I have referenced for my research. 
+            The following article was originally printed in the July 30, 1895 edition of the I.A.C. Student, the school paper 
+            at the time, and was transcribed in it's entirety by myself. The scans of the article are original scans from 
+            microfilm from the Parks Library on campus.
           </div>
           <br>
           <br>
