continue transcribing stanton article from scans
finished through page 3, top paragraph of column two

--- a/stanton.html
+++ b/stanton.html
@@ -283,8 +283,73 @@
             what Walt Whitman calls "the new national virtue of unionism."
           </p>
           <p>
-            Her long and faithful service in the
+            Her long and faithful service in the birth and development of this College had won her to its interests with a devotion that 
+            never tired.
           </p>
+          <p>
+            She loved the college for its own sake, for the wondrous possibilities that she saw embraced in its scope and plan. She loved 
+            it independent of personalities. She rejoiced in the prosperity of any measure or person that would promote the welfare of the 
+            College. To her it stood next to her family and immediate friends. The students and their welfare with every opening year were 
+            to her a righteous solicitude and for their good she was ever ready to lend a hand. She was one of the useful veterans of our 
+            College forces still in her strength whom a reasonable hope would have spared for the comfort and encouragement of years to come. 
+            The recent meeting of the Alumni in June was a great joy to her because it revealed the remarkably good fruits of the early years 
+            of the College and disloosed the still brighter and better things just ahead in the future.
+          </p>
+          <p>
+            One of our sweet American poets makes a beautiful prayer. He speaks of
+          </p>
+          <p>
+            <br>
+            &emsp;The cardinal-flower, whose heart red-bloom<br>
+            &emsp;Grows like living coal upon the green<br>
+            &emsp;Of the midsummer meadows, then how bright,<br>
+            &emsp;How deepeining bright like mounting flame<br>
+            &emsp;&emsp;doth burn.<br>
+            &emsp;The golden-rod upon a thonsand hills.<br>
+            <br>
+          </p>
+          <p>
+            These two flowers emblematize to him all the year and then he prays:
+          </p>
+          <p>
+            <br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;When I am gone,<br>
+            &emsp;Something of me I would might subtly pass<br>
+            &emsp;&emsp;Within these flower twain of all the year;<br>
+            &emsp;So might my spirit send a sudden stir<br>
+            &emsp;&emsp;Into the hearts of those who loved these hills,<br>
+            &emsp;These woods, these waves, and meadows by<br>
+            &emsp;&emsp;the sea.<br>
+            <br>
+          </p>
+          <p>
+            The body of our friend will soon fittingly rest beneath the friendly branches of yonder oaks in sight of our college 
+            halls and work--groves already consecrated by the ashes and spirit of that tower of our college strength Dr. Welch, 
+            whom she revered so highly. May we also pray that her spirit might pass into the flowers of our years and into the 
+            hearts of those who love these prairies, these woods, these meadows and these college halls.
+          </p>
+          <p>
+            She was an able and honored member of the P.E.O. society. She took deep interest in this organization especially in 
+            its literary features. I remember well an interview with her at the time of her joining in which she especially 
+            expressed a desire to share the benefits of personal touch and communion with other minds in the treatment and 
+            investigation of literary subjects. These friends here today as members of the P.E.O. are most eloquent witnessess 
+            of her work and sisterhood in that organization.
+          </p>
+          <p>She had the powers of rare executive ability. Her keen intuition, independent judgment and force of character enabled 
+            her to be a master and guide to others. In public affairs, in neighborhood interests, in home duties she possessed a 
+            womanly tact that induced system and success. She was a good leader of others, because imbued with a sense of true 
+            modesty. She was unassuming in the management of affairs and yet pleasingly commanding.
+          </p>
+          <p>She was strikingly unselfish. Her theory of error and sin was that a large part of it grew out of selfishness. Life's 
+            truest significance lies in the myriad letters of its minor incidents. The minutest details of her work and life were 
+            marked by a large heartedness, which like the sun filling the dew-drops of an early morn, gave them all the glory they 
+            could contain of a larger light. In her latest hours she was thoughtful about her attendents having their meals at a 
+            time when everybody else was overwhelmed with a sense of her own need. This spirit bound with a power almost divine the 
+            humblest servant and the most intellectual friend unto her with lasting gratitude and reverence. It made her life at home 
+            and in the community one never to be forgotten.
+          </p>
+          <hr>
+          <p><i>Finished Through Page 3, Top of Column Two - August 30, 2018</i></p>
           <br>
           <br>
           <p>
