--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="/header.html"></div>
+  <!--<div w3-include-html="http://www.dersche.id/includes/header.html"></div>-->
+  <div w3-include-html="/includes/header.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -48,7 +49,8 @@
       </div>
     </div>
   </section>
-  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <!--<div w3-include-html="http://www.dersche.id/includes/footer.html"></div>-->
+  <div w3-include-html="/includes/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
