--- a/typewriterWishList.html
+++ b/typewriterWishList.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script>
+function w3IncludeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          w3IncludeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -18,7 +46,7 @@
   <link href="assets/css/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div w3-include-html="http://www.dersche.id/includes/typewriterHeader.html"></div>
+  <div w3-include-html="/includes/typewriterHeader.html"></div>
   <script>
   w3IncludeHTML();
   </script>
@@ -30,7 +58,7 @@
           <p>
             <center>
               <img style="width:500px; border:1px solid black;"
-              src="http://www.dersche.id/assets/img/typewriters/1939CoronaStandard__Distressed.jpg"
+              src="/assets/img/typewriters/1939CoronaStandard__Distressed.jpg"
               alt="1939 Corona Standard, Distressed">
             </center>
           </p>
@@ -56,44 +84,44 @@
                 I would also love to add a green Sterling to my collection, or any with finishes other than gloss black. It goes without
                 saying that a Sterling in sterling silver is my dream machine!
               </p>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__MaroonSmall.jpg" alt="1936 Corona Standard, Color changed to Maroon" style="width:150px;"></p>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/1936CoronaStandard__SilverSmall.jpg" alt="1936 Corona Standard, Color Changed to Silver" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/1936CoronaStandard__MaroonSmall.jpg" alt="1936 Corona Standard, Color changed to Maroon" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/1936CoronaStandard__SilverSmall.jpg" alt="1936 Corona Standard, Color Changed to Silver" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
             <li>
               <strong>19XX Make Model</strong>
-              <p><img src="http://www.dersche.id/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
+              <p><img src="/assets/img/typewriters/19XXMakeModel/thumbnail.jpg" alt="19XX Make Model" style="width:150px;"></p>
             </li>
           </ol>
           <hr>
@@ -101,7 +129,7 @@
       </div>
     </div>
   </section>
-  <div w3-include-html="http://www.dersche.id/includes/footer.html"></div>
+  <div w3-include-html="/footer.html"></div>
   <script>
   w3IncludeHTML();
   </script>
